deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ford-nexus
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
